# monaa

./: .dir-locals.el  .gitignore  .readthedocs.yml  CITATION.bib  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  TODO  annotated.html  ans__vec_8hh_source.html  classAnsContainer-members.html  classAnsContainer.html  classAnsVec-members.html  classAnsVec.html  classAnsVec__coll__graph.map  classAnsVec__coll__graph.md5  classAnsVec__inherit__graph.map  classAnsVec__inherit__graph.md5  classConstraintMaker-members.html  classConstraintMaker.html  classIntContainer-members.html  classIntContainer.html  classIntermediateZone-members.html  classIntermediateZone.html  classIntermediateZone__coll__graph.map  classIntermediateZone__inherit__graph.map  classIntermediateZone__inherit__graph.md5  classKMPSkipValue-members.html  classKMPSkipValue.html  classLazyDeque-members.html  classLazyDeque.html  classLazyDeque__coll__graph.map  classLazyDeque__coll__graph.md5  classLazyDeque__inherit__graph.map  classPrintContainer-members.html  classPrintContainer.html  classSundaySkipValue-members.html  classSundaySkipValue.html  classVector-members.html  (+138 more)
.circleci/: config.yml
.github/workflows/: boosttest.yml  build_without_submodule.yml  cmake-lint.yml  dockerhub.yml  doxygen.yml  hadolint.yml  integrated_test.yml
cmake/Modules/: FindPPL.cmake
demo/: MONAA demo.ipynb  MONAA velocity demo.ipynb
doc/: Makefile  NFM2019.md  TA.md  TRE.md  conf.py  getting_started.md  index.md  install.md  man.md  man_header  monaa.1  options.md  related_tools.md  tre2ta.1  tre2ta_man.md
docker/: Dockerfile
examples/: ans_vec.hh  electrocardiography.dot  electrocardiography.txt  integrated_test.sh  pta.dot  small.dot  small.txt  torque.dot
examples/TA/: timed.dot  untimed.dot
examples/getting_started/: timed_word.txt  timed_word2.txt
libmonaa/: CMakeLists.txt  README.md  abstract_nfa.hh  ans_vec.hh  common_types.hh  constraint.hh  intermediate_zone.hh  intersection.cc  intersection.hh  interval.hh  kmp_skip_value.hh  lazy_deque.hh  linear_expression.hh  monaa.cc  monaa.hh  parametric_intersection.cc  parametric_intersection.hh  parametric_kmp_skip_value.hh  parametric_monaa.hh  parametric_timed_automaton.hh  polyhedron_zone_automaton.hh  pta2pza.cc  pta2pza.hh  sunday_skip_value.hh  ta2za.cc  ta2za.hh  timed_automaton.hh  utils.hh  word_container.hh  zone.hh  zone_automaton.hh  zone_container.hh
monaa/: constraint_driver.hh  constraint_lexer.l  constraint_parser.yy  constraint_scanner.hh  intermediate_tre.cc  intermediate_tre.hh  main.cc  objective_tre.hh  parametric_timed_automaton_parser.hh  pmain.cc  timed_automaton_parser.hh  tre.cc  tre.hh  tre2ta.cc  tre_driver.hh  tre_lexer.l  tre_parser.yy  tre_scanner.hh  word_lazy_deque.hh  zone_printer.hh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  (+26 more)
test/: ans_vec.hh  ans_vec_test.cc  ans_vec_test.hh  ascii_test.txt  constraint_test.cc  constraint_test.hh  generate_tre.hh  intermediate_tre_test.cc  intermediate_zone_test.cc  intersection_test.cc  intersection_test.hh  interval_test.cc  kmp_skip_value_test.cc  lazy_deque_test.cc  lazy_deque_test.hh  long_constraint_TA.hh  p_small.dot  p_two_clock.dot  parametric_intersection_test.cc  parametric_kmp_skip_value_test.cc  parametric_timedFJS_test.cc  parametric_timed_automaton_parser_test.cc  phi7.dot  small.dot  sunday_skip_value_test.cc  sunday_skip_value_test.hh  ta2za_test.cc  ta2za_test.hh  timedFJS_test.cc  timed_automaton.dot  timed_automaton_parser_test.cc  timed_automaton_test.cc  timed_automaton_test.hh  timed_word.txt  timed_word_a.txt  torque_short.txt  tre_driver_test.cc  tre_test.cc  two_state_PTA.hh  unit_test.cc  (+5 more)
tgrep/: ans_vec.hh  common_types.hh  constraint.hh  intermediate_tre.cc  intermediate_tre.hh  intermediate_zone.hh  intersection.cc  intersection.hh  interval.hh  kmp_skip_value.hh  lazy_deque.hh  main.cc  sunday_skip_value.hh  ta2za.cc  ta2za.hh  timedFJS.hh  timed_automaton.hh  timed_automaton_parser.hh  tre.cc  tre.hh  tre_driver.hh  tre_lexer.l  tre_parser.yy  tre_scanner.hh  utils.hh  word_container.hh  zone.hh  zone_automaton.hh
utils/: ascii2bin  ascii2bin.c
